Update Idle Brick Breaker.html

--- a/Idle Brick Breaker.html
+++ b/Idle Brick Breaker.html
@@ -17,7 +17,7 @@
             background-color:gainsboro;
             border:1px solid black;
             width:800px;
-            height:800px;
+            height:fit-content;
         }
         .white-ball {
             position:absolute;
@@ -533,5 +533,6 @@
         createBoxes();})
     requestAnimationFrame(gameLoop);
 </script> 
+
 
 
