--- a/Idle Brick Breaker.html
+++ b/Idle Brick Breaker.html
@@ -60,7 +60,7 @@
                 <button style="margin:5px;" id="incrwbal" onclick="increaseDamage('white-ball')">Increase Basic Ball DMG (1)</button>
                 <button style="margin:5px;" id="incrwbalspd" onclick="increaseSpeed('white-ball')">Increase Basic Ball SPD (.4)</button>
             </div>
-            <div style="width:200px;height:fit-content;margin:5px;background-color:white;border:1px solid black;padding:5px;">
+            <div style="width:200px;height:fit-content;margin:5px;background-color:orange;border:1px solid black;padding:5px;">
                 <button style="margin:5px;" id="add_orange_ball" onclick="addBall('orange-ball');">Add Sniper Ball</button>
                 <button style="margin:5px;" id="delobal" onclick="deleteBall('orange-ball')">Delete Sniper Ball</button>
                 <button style="margin:5px;" id="incrobal" onclick="increaseDamage('orange-ball')">Increase Sniper Ball DMG (2)</button>
@@ -533,6 +533,7 @@
         createBoxes();})
     requestAnimationFrame(gameLoop);
 </script> 
+
 
 
 
